--- a/Front-End/src/components/Streaming Components/MovieCard component/MovieCard.css
+++ b/Front-End/src/components/Streaming Components/MovieCard component/MovieCard.css
@@ -1,40 +1,47 @@
-.card {
-  background-color: var(--bgColor) !important ;
+.movie_card {
+  height: fit-content;
   width: 11rem !important;
   animation: collapse 1s paused alternate;
   cursor: pointer;
   overflow: hidden;
   transition: all 0.3s;
 }
-
-.card:hover > img {
-}
-.card:hover > .card-body {
+.movie_card:hover > .card-body {
   color: var(--specialColor);
   transition: all 0.3s;
 }
 
-
-.card > .card-body {
+.movie_card > .card-body {
   color: var(--textColor);
 }
-.card > .img-container > img {
+.movie_card > .img-container > img {
   height: 16rem;
 }
 
-.card > .img-container > .card-overlay {
+.movie_card > .img-container > .card-overlay {
+  z-index: -1;
   opacity: 0;
   background-color: var(--scrollNavColor);
 }
-.card:hover > .img-container > .card-overlay {
+.movie_card:hover > .img-container > .card-overlay {
+  z-index: 1;
   opacity: 1;
-  transition: opacity 0.3s;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
 }
-.card > .img-container > .card-overlay>.card-btns > button{
+.movie_card > .img-container > .card-overlay > .card-btns > button {
   color: var(--textColor);
 }
 
-.card > .img-container > .card-overlay>.card-btns > button:hover {
+.movie_card > .img-container > .card-overlay > .card-btns > button:hover {
   color: var(--specialColor) !important;
   transition: all 0.3s;
+}
+
+.movie_card > .card-small-screen-fav {
+  top: 7px;
+  right: 7px;
 }
